*SVN*

* Add #delete support to has_many :through associations.  Closes #6049 [Martin Landers]

* Reverted old select_limited_ids_list postgresql fix that caused issues in mysql.  Closes #5851 [Rick]

* Removes the ability for eager loaded conditions to be interpolated, since there is no model instance to use as a context for interpolation. #5553 [turnip@turnipspatch.com]

* Added timeout option to SQLite3 configurations to deal more gracefully with SQLite3::BusyException, now the connection can instead retry for x seconds to see if the db clears up before throwing that exception #6126 [wreese@gmail.com]

* Added update_attributes! which uses save! to raise an exception if a validation error prevents saving #6192 [jonathan]

* Deprecated add_on_boundary_breaking (use validates_length_of instead) #6292 [BobSilva]

* The has_many create method works with polymorphic associations.  #6361 [Dan Peterson]

* MySQL: introduce Mysql::Result#all_hashes to support further optimization.  #5581 [Stefan Kaes]

* save! shouldn't validate twice.  #6324 [maiha, Bob Silva]

* Association collections have an _ids reader method to match the existing writer for collection_select convenience (e.g. employee.task_ids). The writer method skips blank ids so you can safely do @employee.task_ids = params[:tasks] without checking every time for an empty list or blank values.  #1887, #5780 [Michael Schuerig]

* Add an attribute reader method for ActiveRecord::Base.observers [Rick Olson]

* Deprecation: count class method should be called with an options hash rather than two args for conditions and joins.  #6287 [Bob Silva]

* has_one associations with a nil target may be safely marshaled.  #6279 [norbauer, Jeremy Kemper]

* Duplicate the hash provided to AR::Base#to_xml to prevent unexpected side effects [Koz]

* Add a :namespace option to  AR::Base#to_xml [Koz]

* Deprecation tests. Remove warnings for dynamic finders and for the foo_count method if it's also an attribute. [Jeremy Kemper]
