@@ -1,5 +1,7 @@
 *SVN*
 
+* Don't rollback in teardown unless a transaction was started. Don't start a transaction in create_fixtures if a transaction is started.  #6282 [lukfugl, Jeremy Kemper]
+
 * Add #delete support to has_many :through associations.  Closes #6049 [Martin Landers]
 
 * Reverted old select_limited_ids_list postgresql fix that caused issues in mysql.  Closes #5851 [Rick]
